Update Maze.java